--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Copyright 2010 Matthieu Sozeau <mattam@mattam.org>
 Distributed under the terms of the New BSD License,
 see LICENSE for details.
 
-Update for Coq 8.4pl2 by Wojciech Jedynak <wjedynak@gmail.com> 2013.
+Updated for Coq 8.4pl2 and 8.4pl3 by Wojciech Jedynak <wjedynak@gmail.com>.
 
 This archive contains an example Coq plugin that implements a
 tactic to get the constructors of an inductive type in Ltac.
